--- a/static/promo/page.manifesto.html
+++ b/static/promo/page.manifesto.html
@@ -10,10 +10,11 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link rel="stylesheet" href="../static/css/app.css">
-		<link rel="icon" href="../static/img/favicon.ico" type="image/x-icon"/>
+		<link rel="stylesheet" href="/static/css/app.css">
+		<link rel="stylesheet" href="/static/css/promo.manifesto.css">
+		<link rel="icon" href="/static/img/favicon.ico" type="image/x-icon"/>
 		
-		<script src="../static/js/vendor/modernizr-2.6.2.min.js"></script>
+		<script src="/static/js/vendor/modernizr-2.6.2.min.js"></script>
 
 		<!-- Type kit -->
 		<script type="text/javascript" src="//use.typekit.net/tjo7bse.js"></script>
