improve(promo) added css injection

--- a/static/promo/lightsaber/tmpl.teaser.html
+++ b/static/promo/lightsaber/tmpl.teaser.html
@@ -1,7 +1,7 @@
 <section class="lunch-section-itempromobox">
 	<div class="lunch-itempromobox-cont">
 		<div class="lunch-itempromobox-img">
-			<img src="http://lunchpad.co/static/img/itempromobox/lightsaber-ad.png" alt="lightsaber" />
+			<img src="/static/promo/lightsaber/lightsaber-ad.png" alt="lightsaber" />
 		</div>
 		
 
