--- a/static/promo/manifesto/page.html
+++ b/static/promo/manifesto/page.html
@@ -11,10 +11,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="stylesheet" href="/static/css/app.css">
-		<link rel="stylesheet" href="/static/css/promo.manifesto.css">
+		<link rel="stylesheet" href="/static/promo/manifesto/style.page.css">
 		<link rel="icon" href="/static/img/favicon.ico" type="image/x-icon"/>
 		
-		<script src="/static/js/vendor/modernizr-2.6.2.min.js"></script>
+		<!--<script src="/static/js/vendor/modernizr-2.6.2.min.js"></script>-->
 
 		<!-- Type kit -->
 		<script type="text/javascript" src="//use.typekit.net/tjo7bse.js"></script>
