fix(promo): wording and margin

--- a/static/promo/buzzfeed/page.html
+++ b/static/promo/buzzfeed/page.html
@@ -35,7 +35,7 @@
 							<span>1</span>
 						</div>
 						<div class="lunch-promo-step-desc">
-							Come to us with an idea for a display window scene. And tell us what item you’d like.
+							Come to us with an idea for a Buzz & Buzz display window scene. And tell us what item you’d like.
 						</div>
 					</div>
 					<div class="lunch-promo-step">
@@ -57,7 +57,7 @@
 				</div>
 
 				<footer>
-					<p>* Promotion is open to everyone except the guys from silicon kammerl, but limited to one entry per week per person.</p>
+					<p>* Promotion is open to everyone except the guys from Silicon&nbsp;Kammerl, but limited to one entry per week per person.</p>
 					<p>** Yea we know, that's totally awesome.</p>
 				</footer>
 			</div>
