--- a/static/promo/buzzfeed/page.html
+++ b/static/promo/buzzfeed/page.html
@@ -43,7 +43,7 @@
 							<span>2</span>
 						</div>
 						<div class="lunch-promo-step-desc">
-							If you get approved by our jury it’s time build your creation. Make our neighbour's kids happy!
+							If you get approved by our jury it’s time to build your creation. Make our neighbours' kids happy!
 						</div>
 					</div>
 					<div class="lunch-promo-step">
@@ -51,7 +51,7 @@
 							<span>3</span>
 						</div>
 						<div class="lunch-promo-step-desc">
-							Enjoy your own unique item.** <br>It’s time to make your collueges jelly!
+							Enjoy your own unique item.** <br>It’s time to make your colleagues jelly!
 						</div>
 					</div>
 				</div>
