--- a/static/promo/buzzfeed/tmpl.teaser.html
+++ b/static/promo/buzzfeed/tmpl.teaser.html
@@ -6,7 +6,7 @@
 
 
 		<h2>Items, items everywhere!</h2>
-		<p>An exclusive item is everyones dream. But until now, they have been hard to come by.</p>
+		<p>An exclusive item is everyone's dream. But until now, they have been hard to come by.</p>
 		<p>Worry no longer, Buzz Lightyear is coming to help!</p>
 		<p><a class="lunch-button" href="/static/promo/buzzfeed/page.html">Learn More</a></p>
 	</div>
